fix(docker): fix docker file and optimize size
- fix docker for PROD
- add opcache prepload for PROD
- optimize docker for dev
- fix table name for entity Link, Page & Partenaire

--- a/.dockerignore
+++ b/.dockerignore
@@ -10,11 +10,17 @@
 .php-version
 .sensiolabs.yml
 
-.env
-.env.local
+**/.env
+**/.env.local
+**/.DS_Store
 *.md
 docker-compose.*
 hooks
 
 node_modules
 vendor
+var/cache
+var/log
+var/sessions
+var/*.db
+var/.php_cs.cache
