--- a/docker/docker-full/phpfpm/conf.d/prod/custom-php.ini
+++ b/docker/docker-full/phpfpm/conf.d/prod/custom-php.ini
@@ -14,3 +14,6 @@ opcache.validate_timestamps = Off
 
 realpath_cache_size = 4096K
 realpath_cache_ttl = 600
+
+opcache.preload=/var/www/html/config/preload.php
+opcache.preload_user=www-data
