--- a/docker/docker-full/nginx/conf.d/default.conf
+++ b/docker/docker-full/nginx/conf.d/default.conf
@@ -1,4 +1,15 @@
+upstream _phpfpm {
+  server unix:/var/run/php/aml87.sock;
+}
+
 server {
+    server_name _;
+    listen 443 ssl default_server;
+    http2 on;
+
+    ssl_certificate /etc/nginx/ssl/crt/aml87.crt;
+    ssl_certificate_key /etc/nginx/ssl/key/aml87.key;
+
     gzip on;
     gzip_vary on;
     gzip_min_length 10240;
@@ -6,7 +17,12 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
     gzip_disable "MSIE [1-6]\.";
 
+    access_log  /dev/stdout;
+    error_log   /dev/stdout;
+
     root /var/www/html/public;
+
+    charset utf-8;
 
     location / {
         # try to serve file directly, fallback to index.php
@@ -14,7 +30,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass aml87_php_fpm:9000;
+        fastcgi_pass _phpfpm;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         fastcgi_intercept_errors on;
         include fastcgi_params;
